kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: consul
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: consul-consul-server
              servicePort: 8500
